<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/ic_baseline_star_outline_24"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_stream"
        android:icon="@drawable/ic_baseline_article_24"
        android:title="@string/title_stream" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_portofolio"
        android:icon="@drawable/ic_baseline_data_usage_24"
        android:title="@string/title_portofolio" />

</menu>