<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_watchlist">

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.stockbit.hiring.ui.home.watchlist.WatchListFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.stockbit.hiring.ui.home.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.stockbit.hiring.ui.home.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_stream"
        android:name="com.stockbit.hiring.ui.home.stream.StreamFragment"
        android:label="@string/title_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/navigation_portofolio"
        android:name="com.stockbit.hiring.ui.home.portofolio.PortofolioFragment"
        android:label="@string/title_portofolio"
        tools:layout="@layout/fragment_portofolio" />
</navigation>